--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <footer class="footer">
         <p class="footer__copyright">2025 &copy; Spots</p>
       </footer>
-      <div class="modal modal_is-opened">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
@@ -150,7 +150,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
@@ -178,5 +178,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
