form fields and submission responses

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Val Thorens</h2>
+                <h2 class="card__caption">Val Thorens</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -63,7 +63,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Restaurant terrace</h2>
+                <h2 class="card__caption">Restaurant terrace</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -75,7 +75,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">An outdoor cafe</h2>
+                <h2 class="card__caption">An outdoor cafe</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -87,7 +87,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">
+                <h2 class="card__caption">
                   A very long bridge, over the forest and through the woods.
                 </h2>
                 <button type="button" class="card__like-btn"></button>
@@ -101,7 +101,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Tunnel with morning light</h2>
+                <h2 class="card__caption">Tunnel with morning light</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -113,7 +113,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Mountain house</h2>
+                <h2 class="card__caption">Mountain house</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
