corrections on first submission

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </footer>
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
-          <button class="modal__close-btn"></button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
             <label for="modal-name-input" class="modal__label"
@@ -152,7 +152,7 @@
       </div>
       <div class="modal" id="new-post-modal">
         <div class="modal__container">
-          <button class="modal__close-btn"></button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
           <form class="modal__form">
             <label for="card-image-input" class="modal__label"
